biscuit-terminal/lib/tests/snapshots/layout_matrix__UnorderedList__align_right.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
                                                                   - First item
                                                                   - Second item
                                                                   - Third item
---
TREE
- First item
- Second item
- Third item
