biscuit-terminal/lib/tests/snapshots/layout_matrix__UnorderedList__border_thin_left.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
- First item
- Second item
- Third item
---
VIA_TREE_DIRECT
│- First item
│- Second item
│- Third item
